Updated HandBrake core to SVN 6430. Added Russian and Brazilian Portugese translations. Updated translated strings. Added ability to customize the preview folder location. Removed the single-instance restriction. Command-line and auto-play actions will apply to the first instance of VidCoder opened.
--HG--
branch : beta

--- a/VidCoder/Resources/CommonRes.cs.resx
+++ b/VidCoder/Resources/CommonRes.cs.resx
@@ -226,7 +226,7 @@ Tento program je rozšiřován v naději že bude užitečný, ale BEZ JAKÉKOLI
     <value>Nelze získat přístup do následujícího adresáře:</value>
   </data>
   <data name="None" xml:space="preserve">
-    <value>Žádný</value>
+    <value>Žádné</value>
   </data>
   <data name="Succeeded" xml:space="preserve">
     <value>Podařilo se</value>
