--- a/VidCoder/Resources/EnumsRes.hu.resx
+++ b/VidCoder/Resources/EnumsRes.hu.resx
@@ -154,16 +154,36 @@
   <data name="Deinterlace_Slower" xml:space="preserve">
     <value>Lassabb</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="DenoisePreset_Light" xml:space="preserve">
+    <value>Alacsony</value>
+  </data>
+  <data name="DenoisePreset_Medium" xml:space="preserve">
+    <value>Közepes</value>
+  </data>
+  <data name="DenoisePreset_Strong" xml:space="preserve">
+    <value>Erős</value>
+  </data>
+  <data name="DenoisePreset_Ultralight" xml:space="preserve">
+    <value>Ultrakönnyű</value>
+  </data>
+  <data name="DenoiseTune_Animation" xml:space="preserve">
+    <value>Animáció</value>
+  </data>
+  <data name="DenoiseTune_Film" xml:space="preserve">
+    <value>Film</value>
+  </data>
+  <data name="DenoiseTune_Grain" xml:space="preserve">
+    <value>Szemcsés</value>
+  </data>
+  <data name="DenoiseTune_HighMotion" xml:space="preserve">
+    <value>Nagy mozgás</value>
+  </data>
+  <data name="Denoise_HQDN3D" xml:space="preserve">
+    <value>hqdn3d</value>
+  </data>
+  <data name="Denoise_NLMeans" xml:space="preserve">
+    <value>NL-Means</value>
+  </data>
   <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
     <value>Ne csináljon semmit</value>
   </data>
