--- a/VidCoder/Resources/PreviewRes.fr.resx
+++ b/VidCoder/Resources/PreviewRes.fr.resx
@@ -180,5 +180,7 @@
   <data name="BottomMargin" xml:space="preserve">
     <value>Marge du bas</value>
   </data>
-	
+	<data name="PlaySourceDisabledNotFoundToolTip" xml:space="preserve">
+    <value>Fichier source introuvable.</value>
+  </data>
 </root>
