--- a/VidCoder/Resources/EncodingRes.fr.resx
+++ b/VidCoder/Resources/EncodingRes.fr.resx
@@ -269,7 +269,11 @@ Pour la source audio disposant d'une large plage dynamique (séquences très for
   <data name="WebOptimizedToolTip" xml:space="preserve">
     <value>Organiser le fichier pour une meilleure lecture en téléchargement progressif.</value>
   </data>
-  
+  <data name="ProfileToolTip" xml:space="preserve">
+    <value>Limiter le profil du flux de sortie. Si vous spécifiez un profil, il se substitue à tous les autres paramètres, donc si vous l'utilisez, vous serez garanti d'un flux compatible.
+
+Vous devez définir ceci, si vous savez que votre appareil de lecture prend uniquement en charge un certain profil.</value>
+  </data>
   <data name="X264TuneToolTip" xml:space="preserve">
     <value>Ajuster les options pour les optimiser pour le contenu de votre entrée. Si vous spécifiez une mise au point, les modifications s'appliqueront après la présélection mais avant tous les autres paramètres.</value>
   </data>
@@ -306,7 +310,9 @@ Pour la source audio disposant d'une large plage dynamique (séquences très for
   <data name="TabHeader_Audio" xml:space="preserve">
     <value>Audio</value>
   </data>
-  
+  <data name="TabHeader_Advanced" xml:space="preserve">
+    <value>Vidéo Avancée</value>
+  </data>
   <data name="Rename" xml:space="preserve">
     <value>Renommer</value>
   </data>
@@ -436,9 +442,15 @@ Pour la source audio disposant d'une large plage dynamique (séquences très for
   <data name="TuneLabel" xml:space="preserve">
     <value>Optimisation:</value>
   </data>
-  
-  
-  
+  <data name="Profile_baseline" xml:space="preserve">
+    <value>Baseline</value>
+  </data>
+  <data name="Profile_main" xml:space="preserve">
+    <value>Main</value>
+  </data>
+  <data name="Profile_high" xml:space="preserve">
+    <value>Haut</value>
+  </data>
   <data name="Preset_UltraFast" xml:space="preserve">
     <value>Ultra rapide</value>
   </data>
@@ -469,14 +481,30 @@ Pour la source audio disposant d'une large plage dynamique (séquences très for
   <data name="Preset_Placebo" xml:space="preserve">
     <value>Placebo</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="Tune_film" xml:space="preserve">
+    <value>Film</value>
+  </data>
+  <data name="Tune_animation" xml:space="preserve">
+    <value>Animation</value>
+  </data>
+  <data name="Tune_grain" xml:space="preserve">
+    <value>Grain</value>
+  </data>
+  <data name="Tune_stillimage" xml:space="preserve">
+    <value>Image fixe</value>
+  </data>
+  <data name="Tune_psnr" xml:space="preserve">
+    <value>PSNR</value>
+  </data>
+  <data name="Tune_ssim" xml:space="preserve">
+    <value>SSIM</value>
+  </data>
+  <data name="Tune_fastdecode" xml:space="preserve">
+    <value>Décodage rapide</value>
+  </data>
+  <data name="Tune_zerolatency" xml:space="preserve">
+    <value>Zéro latence</value>
+  </data>
   <data name="FpsFormat" xml:space="preserve">
     <value>{0:0. ###} IPS</value>
   </data>
@@ -559,11 +587,21 @@ Pour la source audio disposant d'une large plage dynamique (séquences très for
     <value>AAC (FAAC)</value>
     <comment>Leaving this blank will mean we rely on the friendly name from HandBrake. The short name is used for the key (: gets replaced by _)</comment>
   </data>
-  
-  
-  
-  
-  
+  <data name="AudioEncoder_av_aac" xml:space="preserve">
+    <value>AAC (avcodec)</value>
+  </data>
+  <data name="AudioEncoder_ac3" xml:space="preserve">
+    <value>AC3</value>
+  </data>
+  <data name="AudioEncoder_flac16" xml:space="preserve">
+    <value>FLAC 16-bit</value>
+  </data>
+  <data name="AudioEncoder_mp3" xml:space="preserve">
+    <value>MP3</value>
+  </data>
+  <data name="AudioEncoder_vorbis" xml:space="preserve">
+    <value>Vorbis</value>
+  </data>
   <data name="Mixdown_5point1" xml:space="preserve">
     <value>Canaux 5.1</value>
   </data>
@@ -762,8 +800,14 @@ Pour la source audio disposant d'une large plage dynamique (séquences très for
   <data name="AdvancedOptionsStringLabel" xml:space="preserve">
     <value>options x264 additionnelles avancée :</value>
   </data>
-  
-  
+  <data name="LevelToolTip" xml:space="preserve">
+    <value>Définit et assure la compatibilité avec le niveau spécifié de l'encodeur.
+
+Remplace tous les autres réglages.</value>
+  </data>
+  <data name="Profile_high444" xml:space="preserve">
+    <value>Haut 4:4:4 prédictif</value>
+  </data>
   <data name="VideoCodecLabel" xml:space="preserve">
     <value>Codec vidéo :</value>
   </data>
@@ -788,7 +832,9 @@ Pour la source audio disposant d'une large plage dynamique (séquences très for
   <data name="X264Settings" xml:space="preserve">
     <value>Réglages x264</value>
   </data>
-  
+  <data name="LevelLabel" xml:space="preserve">
+    <value>Niveau:</value>
+  </data>
   <data name="MoreSettingsLabel" xml:space="preserve">
     <value>+ de Paramètres :</value>
   </data>
@@ -813,46 +859,128 @@ Pour la source audio disposant d'une large plage dynamique (séquences très for
   <data name="DtsMp4Warning" xml:space="preserve">
     <value>Peu de lecteurs supporte la lecture de l'audio DTS dans un conteneur MP4. MKV est recommandé pour l'audio DTS.</value>
   </data>
-  
+  <data name="AudioEncoder_flac24" xml:space="preserve">
+    <value>FLAC 24-bit</value>
+  </data>
   <data name="Advanced_PsychovisualLabel" xml:space="preserve">
     <value>Psychovisuel</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="AudioEncoder_fdk_aac" xml:space="preserve">
+    <value>AAC (FDK)</value>
+  </data>
+  <data name="AudioEncoder_fdk_haac" xml:space="preserve">
+    <value>HE-AAC (FDK)</value>
+  </data>
+  <data name="X264SettingsRadioButtonBasic" xml:space="preserve">
+    <value>Basique</value>
+    <comment>Label for radio button to choose basic x264 settings: Preset, Profile, Tune, Level.</comment>
+  </data>
+  <data name="X264SettingsRadioButtonAdvanced" xml:space="preserve">
+    <value>Onglet Avancé</value>
+    <comment>Label for radio button to choose advanced x264 settings on a separate tab.</comment>
+  </data>
+  <data name="VideoEncoder_mpeg2" xml:space="preserve">
+    <value>MPEG-2</value>
+  </data>
+  <data name="VideoEncoder_mpeg4" xml:space="preserve">
+    <value>MPEG-4</value>
+  </data>
+  <data name="VideoEncoder_theora" xml:space="preserve">
+    <value>Theora</value>
+  </data>
+  <data name="RemoveAudioEncodingToolTip" xml:space="preserve">
+    <value>Enlever l'encodage audio</value>
+  </data>
+  <data name="AutoPassthroughFallbackLabel" xml:space="preserve">
+    <value>Revenir:</value>
+  </data>
+  <data name="AutoPassthroughFallbackToolTip" xml:space="preserve">
+    <value>L'option ignorer ne fonctionne pas sur tous les codecs audio. Ce paramètre spécifie à l'encodeur pour revenir si la piste ne peut pas être ignorée.</value>
+  </data>
+  <data name="EncoderSettings" xml:space="preserve">
+    <value>Paramètres de l'encodeur</value>
+  </data>
+  <data name="QsvDecodingLabel" xml:space="preserve">
+    <value>Décodage QSV</value>
+  </data>
+  <data name="ScaleMethod_Lanczos" xml:space="preserve">
+    <value>Lanczos</value>
+  </data>
+  <data name="ScaleMethod_BicubicOpenCL" xml:space="preserve">
+    <value>Bicubique (OpenCL)</value>
+  </data>
+  <data name="QsvPreset_Speed" xml:space="preserve">
+    <value>Vitesse</value>
+  </data>
+  <data name="QsvPreset_Balanced" xml:space="preserve">
+    <value>Équilibré</value>
+  </data>
+  <data name="QsvPreset_Quality" xml:space="preserve">
+    <value>Qualité</value>
+  </data>
+  <data name="PresetToolTip" xml:space="preserve">
+    <value>Modifier les options pour balancer entre la compression et la vitesse d'encodage.</value>
+  </data>
+  <data name="ScaleMethodToolTip" xml:space="preserve">
+    <value>Lanczos : Moteur de mise à l'échelle par défaut avec la meilleure qualité.
+Bicubique : Algorithme de mise à l'échelle basé sur l'accéléré matériel OpenCL.</value>
+  </data>
+  <data name="AudioEncoder_Passthrough" xml:space="preserve">
+    <value>Ignorer</value>
+  </data>
+  <data name="Passthrough_aac" xml:space="preserve">
+    <value>AAC</value>
+  </data>
+  <data name="Passthrough_ac3" xml:space="preserve">
+    <value>AC3</value>
+  </data>
+  <data name="Passthrough_any" xml:space="preserve">
+    <value>Tous</value>
+    <comment>Choice for a passthrough which accepts any input codec.</comment>
+  </data>
+  <data name="Passthrough_dts" xml:space="preserve">
+    <value>DTS</value>
+  </data>
+  <data name="Passthrough_dtshd" xml:space="preserve">
+    <value>DTS-HD</value>
+  </data>
+  <data name="Passthrough_mp3" xml:space="preserve">
+    <value>MP3</value>
+  </data>
+  <data name="ScopeLabel" xml:space="preserve">
+    <value>Cadre:</value>
+  </data>
+  <data name="PassthroughScopeToolTip" xml:space="preserve">
+    <value>Spécifie quel codec d'entrée qui s'appliquera pour ignorer.</value>
+  </data>
+  <data name="FlipHorizontalCheckBox" xml:space="preserve">
+    <value>Retourner horizontalement</value>
+  </data>
+  <data name="FlipVerticalCheckBox" xml:space="preserve">
+    <value>Retourner verticalement</value>
+  </data>
+  <data name="Rotation_Clockwise90" xml:space="preserve">
+    <value>Vers la droite 90°</value>
+  </data>
+  <data name="Rotation_Counterclockwise90" xml:space="preserve">
+    <value>Vers la gauche 90°</value>
+  </data>
+  <data name="Rotation_180" xml:space="preserve">
+    <value>180°</value>
+  </data>
+  <data name="RotationToolTip" xml:space="preserve">
+    <value>Pivoter l'image. Cela s'applique après tout redimensionnement et recadrage.</value>
+  </data>
+  <data name="FlipHorizontalToolTip" xml:space="preserve">
+    <value>Retourner l'image horizontalement. Cela s'applique avant toute rotation.</value>
+  </data>
+  <data name="FlipVerticalToolTip" xml:space="preserve">
+    <value>Retourner l'image verticalement. Cela s'applique avant toute rotation.</value>
+  </data>
+  <data name="PassthroughIfPossibleCheckBox" xml:space="preserve">
+    <value>Ignorer si possible</value>
+  </data>
+  <data name="PassthroughIfPossibleToolTip" xml:space="preserve">
+    <value>Si la piste d'entrée correspond au codec, elle sera ignorée au lieu d'encodée.</value>
+  </data>
 </root>
