--- a/VidCoder/Resources/EnumsRes.cs.resx
+++ b/VidCoder/Resources/EnumsRes.cs.resx
@@ -154,16 +154,36 @@
   <data name="Deinterlace_Slower" xml:space="preserve">
     <value>Pomalejší</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="DenoisePreset_Light" xml:space="preserve">
+    <value>Slabé</value>
+  </data>
+  <data name="DenoisePreset_Medium" xml:space="preserve">
+    <value>Střední</value>
+  </data>
+  <data name="DenoisePreset_Strong" xml:space="preserve">
+    <value>Silné</value>
+  </data>
+  <data name="DenoisePreset_Ultralight" xml:space="preserve">
+    <value>Velmi slabé</value>
+  </data>
+  <data name="DenoiseTune_Animation" xml:space="preserve">
+    <value>Animace</value>
+  </data>
+  <data name="DenoiseTune_Film" xml:space="preserve">
+    <value>Film</value>
+  </data>
+  <data name="DenoiseTune_Grain" xml:space="preserve">
+    <value>Zrnitý</value>
+  </data>
+  <data name="DenoiseTune_HighMotion" xml:space="preserve">
+    <value>Rychlý pohyb</value>
+  </data>
+  <data name="Denoise_HQDN3D" xml:space="preserve">
+    <value>hqdn3d</value>
+  </data>
+  <data name="Denoise_NLMeans" xml:space="preserve">
+    <value>NL-Means</value>
+  </data>
   <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
     <value>Nedělat nic</value>
   </data>
