--- a/VidCoder/Resources/EnumsRes.de.resx
+++ b/VidCoder/Resources/EnumsRes.de.resx
@@ -154,16 +154,36 @@
   <data name="Deinterlace_Slower" xml:space="preserve">
     <value>Langsamer</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="DenoisePreset_Light" xml:space="preserve">
+    <value>Leicht</value>
+  </data>
+  <data name="DenoisePreset_Medium" xml:space="preserve">
+    <value>Mittelmäßig</value>
+  </data>
+  <data name="DenoisePreset_Strong" xml:space="preserve">
+    <value>Stark</value>
+  </data>
+  <data name="DenoisePreset_Ultralight" xml:space="preserve">
+    <value>Sehr leicht</value>
+  </data>
+  <data name="DenoiseTune_Animation" xml:space="preserve">
+    <value>Zeichentrick</value>
+  </data>
+  <data name="DenoiseTune_Film" xml:space="preserve">
+    <value>Film</value>
+  </data>
+  <data name="DenoiseTune_Grain" xml:space="preserve">
+    <value>Körnung</value>
+  </data>
+  <data name="DenoiseTune_HighMotion" xml:space="preserve">
+    <value>Starke Bewegung</value>
+  </data>
+  <data name="Denoise_HQDN3D" xml:space="preserve">
+    <value>hqdn3d</value>
+  </data>
+  <data name="Denoise_NLMeans" xml:space="preserve">
+    <value>NL-Means</value>
+  </data>
   <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
     <value>Nichts machen</value>
   </data>
