--- a/VidCoder/Resources/EnumsRes.eu.resx
+++ b/VidCoder/Resources/EnumsRes.eu.resx
@@ -154,16 +154,36 @@
   <data name="Deinterlace_Slower" xml:space="preserve">
     <value>Astiroagoa</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="DenoisePreset_Light" xml:space="preserve">
+    <value>Arina</value>
+  </data>
+  <data name="DenoisePreset_Medium" xml:space="preserve">
+    <value>Ertaina</value>
+  </data>
+  <data name="DenoisePreset_Strong" xml:space="preserve">
+    <value>Gogorra</value>
+  </data>
+  <data name="DenoisePreset_Ultralight" xml:space="preserve">
+    <value>Oso-arina</value>
+  </data>
+  <data name="DenoiseTune_Animation" xml:space="preserve">
+    <value>Animazioa</value>
+  </data>
+  <data name="DenoiseTune_Film" xml:space="preserve">
+    <value>Filma</value>
+  </data>
+  <data name="DenoiseTune_Grain" xml:space="preserve">
+    <value>Garaua</value>
+  </data>
+  <data name="DenoiseTune_HighMotion" xml:space="preserve">
+    <value>Mugimendu Handia</value>
+  </data>
+  <data name="Denoise_HQDN3D" xml:space="preserve">
+    <value>hqdn3d</value>
+  </data>
+  <data name="Denoise_NLMeans" xml:space="preserve">
+    <value>NL-Means</value>
+  </data>
   <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
     <value>Ez egin ezer</value>
   </data>
