--- a/VidCoder/Resources/EnumsRes.fr.resx
+++ b/VidCoder/Resources/EnumsRes.fr.resx
@@ -154,16 +154,36 @@
   <data name="Deinterlace_Slower" xml:space="preserve">
     <value>Plus lent</value>
   </data>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  <data name="DenoisePreset_Light" xml:space="preserve">
+    <value>Clair</value>
+  </data>
+  <data name="DenoisePreset_Medium" xml:space="preserve">
+    <value>Moyen</value>
+  </data>
+  <data name="DenoisePreset_Strong" xml:space="preserve">
+    <value>Fort</value>
+  </data>
+  <data name="DenoisePreset_Ultralight" xml:space="preserve">
+    <value>Très Clair</value>
+  </data>
+  <data name="DenoiseTune_Animation" xml:space="preserve">
+    <value>Animation</value>
+  </data>
+  <data name="DenoiseTune_Film" xml:space="preserve">
+    <value>Film</value>
+  </data>
+  <data name="DenoiseTune_Grain" xml:space="preserve">
+    <value>Grain</value>
+  </data>
+  <data name="DenoiseTune_HighMotion" xml:space="preserve">
+    <value>Mouvement rapide</value>
+  </data>
+  <data name="Denoise_HQDN3D" xml:space="preserve">
+    <value>hqdn3d</value>
+  </data>
+  <data name="Denoise_NLMeans" xml:space="preserve">
+    <value>NL-Means</value>
+  </data>
   <data name="EncodeCompleteActionType_DoNothing" xml:space="preserve">
     <value>Ne rien faire</value>
   </data>
