--- a/VidCoder/Resources/MiscRes.cs.resx
+++ b/VidCoder/Resources/MiscRes.cs.resx
@@ -245,6 +245,10 @@
   <data name="EncodeCompleteWarning_Title" xml:space="preserve">
     <value>Kódování bylo dokončeno.</value>
   </data>
-	
-	
+	<data name="CouldNotFindVideoPlayerError" xml:space="preserve">
+    <value>Nelze najít video přehrávač pro {0}.</value>
+  </data>
+	<data name="ErrorPlayingSource" xml:space="preserve">
+    <value>Při přehrávání zdroje došlo k chybě.</value>
+  </data>
 </root>
