--- a/VidCoder/Resources/MiscRes.de.resx
+++ b/VidCoder/Resources/MiscRes.de.resx
@@ -245,6 +245,10 @@
   <data name="EncodeCompleteWarning_Title" xml:space="preserve">
     <value>Encodierung abgeschlossen.</value>
   </data>
-	
-	
+	<data name="CouldNotFindVideoPlayerError" xml:space="preserve">
+    <value>Video-Player konnte für {0} nicht gefunden werden.</value>
+  </data>
+	<data name="ErrorPlayingSource" xml:space="preserve">
+    <value>Fehler bei der Wiedergabe der Quelle.</value>
+  </data>
 </root>
