--- a/VidCoder/Resources/QueueTitlesRes.fr.resx
+++ b/VidCoder/Resources/QueueTitlesRes.fr.resx
@@ -153,5 +153,7 @@
   <data name="TitleFormat">
     <value xml:space="preserve">Titre : {0}</value>
   </data>
-	
+	<data name="OverrideDirectoryCheckBox" xml:space="preserve">
+    <value>Remplacer le répertoire :</value>
+  </data>
 </root>
