--- a/VidCoder/Resources/OptionsRes.resx
+++ b/VidCoder/Resources/OptionsRes.resx
@@ -418,4 +418,7 @@
   <data name="PreserveFolderStructureToolTip" xml:space="preserve">
     <value>If you encode a folder full of files the encoded versions will be put into subfolders to match the source directory structure.</value>
   </data>
+	<data name="CustomPreviewFolderCheckBox" xml:space="preserve">
+    <value>Custom folder for previews:</value>
+  </data>
 </root>
