--- a/VidCoder/Resources/EncodingRes.eu.resx
+++ b/VidCoder/Resources/EncodingRes.eu.resx
@@ -983,4 +983,10 @@ Bikubikoa: Hau OpenCL hardwarez bizkorturiko neurriratze algoritmo bat da.</valu
   <data name="PassthroughIfPossibleToolTip" xml:space="preserve">
     <value>Sarrera bidea bat badator kodekarekin igaro egingo da kodeatu ordez.</value>
   </data>
+	<data name="ScalingAlgorithmLabel" xml:space="preserve">
+    <value>Eskalatze Algoritmoa:</value>
+  </data>
+	<data name="RotationLabel" xml:space="preserve">
+    <value>Itzulikapena:</value>
+  </data>
 </root>
