--- a/VidCoder/Resources/OptionsRes.eu.resx
+++ b/VidCoder/Resources/OptionsRes.eu.resx
@@ -418,4 +418,7 @@
   <data name="PreserveFolderStructureToolTip" xml:space="preserve">
     <value>Agiritegi bateko agiri guztiak kodeatzen badituzu kodeatutako bertsioak azpiagiritegietan jarriko dira iturburu zuzenbide egiturarekin bat etortzeko.</value>
   </data>
+	<data name="CustomPreviewFolderCheckBox" xml:space="preserve">
+    <value>Norbere agiritegia aurreikuspenetarako:</value>
+  </data>
 </root>
