--- a/VidCoder/Resources/OptionsRes.ja.resx
+++ b/VidCoder/Resources/OptionsRes.ja.resx
@@ -418,4 +418,7 @@
   <data name="PreserveFolderStructureToolTip" xml:space="preserve">
     <value>フォルダ中のすべてのファイルをエンコードする場合にエンコードしたファイルは元のディレクトリ構造と同じフォルダに保存されます。</value>
   </data>
+	<data name="CustomPreviewFolderCheckBox" xml:space="preserve">
+    <value>プレビュー用のフォルダを指定:</value>
+  </data>
 </root>
